# keval

./: .gitignore  .gitmodules  LICENSE  README.md
docs/: getting_started.md
kevald/: .clang-format  alias.h  config.h  debug_log.h  exception.cpp  exception.h  final_action.h  format.h  globals.h  kevald.inf  kevald.sln  kevald.vcxproj  main.cpp
kevald/communication/: buffer_deserializer.cpp  buffer_deserializer.h  communication_defs.h  deserialize.cpp  deserialize.h  deserialize_exception.h  request_dispatch.cpp  request_dispatch.h  request_exception.cpp  request_exception.h  request_handler.cpp  request_handler.h  translate.cpp  translate.h
kevald/ffi/: cif.cpp  cif.h  ffi_exception.cpp  ffi_exception.h
kevald/irps/: ioctl.h  irp_handlers.cpp  irp_handlers.h
kevald/kernel/: kernel.cpp  kernel.h  nt_defs.h  nt_exception.cpp  nt_exception.h  nt_objects.cpp  nt_objects.h
kevald/routines/: routine_exception.cpp  routine_exception.h  routine_finder.cpp  routine_finder.h
pykeval/: README.md  example.py  setup.cfg
pykeval/pykeval/: log.py
pykeval/pykeval/broker/: __init__.py  interface.py  ioctl.py  ioctl_requests.py  ioctl_serialize.py  local.py  messaging.py  remote.py  remote_server.py  requests.py
pykeval/pykeval/frontend/: broker_allocation.py  client.py  function_cache.py  parser.py
pykeval/pykeval/frontend/ctypes_shim/: address.py  collect.py  native.py  translate.py  utils.py
pykeval/pykeval/interactive_shell/: __init__.py  __main__.py
pykeval/pykeval/server/: __init__.py  __main__.py
pykeval/pykeval/shared/: ffi.py
