[metadata]
name = pykeval
version = 1.0.0
description = Library for communication with Keval's driver (`kevald.sys`)
long_description = file: README.md, LICENSE
author = Tal Marian
keywords = ffi, windows, kernel, ctypes
license = MIT
classifiers =
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8

[options.extras_require]
client =
    libclang ~= 12.0.0
    ipython ~= 7.27.0

[options.entry_points]
console_scripts =
    keval-server = pykeval.server:main
    ikeval = pykeval.interactive_shell:start_interactive_shell [client]
